language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/imm_borrow_global_requires_acquire.move
module A {
    resource struct T1{ b: bool }

    public fun test(addr: address) {
        borrow_global<T1>(addr);
    }

}

// check: MISSING_ACQUIRES_RESOURCE_ANNOTATION_ERROR
